--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "firebase": "^9.12.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^3.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
